<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/nav_wishlist" />
    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_receipt"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_mypage" />
</menu>
